--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,67 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
-group 'org.example'
+group 'kmi.hc.hops.api'
+compileJava.options.encoding = 'UTF-8'
+sourceCompatibility = 8
 version '1.0-SNAPSHOT'
+
+ext.springVersion = '5.3.19'
+ext.logbackVersion = '1.2.9'
+ext.mybatisVersion = '3.5.9'
 
 repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main {
+        resources {
+            srcDirs "src/main/java", "src/main/resources"
+            includes = ["**/*.xml"]
+        }
+    }
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    providedCompile (
+            'javax.servlet:javax.servlet-api:3.1.0',
+            'javax.servlet.jsp:javax.servlet.jsp-api:2.3.1'
+    )
+
+    // spirng
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"
+
+    // logging
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
+
+    // DB
+    implementation group: 'org.mybatis', name: 'mybatis', version: "${mybatisVersion}"
+    implementation group: 'org.mybatis', name: 'mybatis-spring', version: '2.0.7'
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: "${springVersion}"
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+
+    //javax
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
+    // jackson
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.3'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.3'
+
+    //Junit
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
+
+//build시 duplicate error가 발생하여 방지를 위해 일단 추가
+processResources.duplicatesStrategy='include'
 
 test {
     useJUnitPlatform()
